--- a/css/styles.css
+++ b/css/styles.css
@@ -17,20 +17,20 @@ main{
 /*Se recomiendo RGB(RGBA) para dar opacidad*/
 
 header{
-    background-color: #ddd;
+    background-color: white;
     text-align: center;
     line-height: 2;
 }
 
 h1, h2{
-    background-color: #bfbfbf;
+    background-color:rgba(34, 49, 63, 1);
     text-transform: uppercase;
 }
 h1{
-    color: #1f497d;
+    color: white;
 }
 h2{
-    color: #632423;
+    color: white;
 }
 
 
@@ -39,4 +39,14 @@ h2{
 .item-detail{
     font-style: italic;
     font-weight: bold;
+}
+
+/* modificar el footer*/
+footer{
+    background-color:rgba(34, 49, 63, 1);
+    text-align: center;
+    line-height: 2;
+    color: white;
+    font-size: 1cm;
+    
 }
